--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 136,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,7 @@
     "c_ = 2.99792458e10  # light speed (cm/s)\n",
     "kB_ = 8.617333262145e-11  # Boltzmann constant (MeV/K)\n",
     "Msun_ = 2.0e33 # Solar mass (g)\n",
+    "r_0_ = 1.8e-13 # nuclear radius coef for deformed post-scission nuclei (cm)\n",
     "\n",
     "delta_ = 1  # power-law profile for inner ejecta (Barnes&Kasen2016)\n",
     "n_ = 1  # power-law profile for outer ejecta (Barnes&Kasen2016)\n",
@@ -76,25 +77,42 @@
     "    n_eb = bound electron number density (cm-3) \n",
     "    '''\n",
     "\n",
-    "    tau = to_erg(E_beta) / (m_e_ * c_**2)  # E_beta converted to erg\n",
+    "    tau = to_erg(E_beta) / (m_e_ * c_**2) \n",
     "    g = 1 + tau**2 / 8 - (2*tau+1) * np.log(2)\n",
     "    Edot_IE = 2*np.pi * r_e_**2 * m_e_ * c_**3 * n_eb / (v_beta/c_)\n",
     "    Edot_IE *= (2 * np.log(E_beta/Ibar) \n",
     "                + np.log(1 + tau/2) \n",
     "                + (1 - (v_beta/c_)**2) * g)\n",
     "\n",
-    "    return(Edot_IE / 1.60218e-6)\n",
+    "    return(to_MeV(Edot_IE))\n",
     "\n",
     "\n",
     "def synch_losses(v_beta, B):\n",
-    "    ''' Returns synchrotron losses from Barnes&Kasen2016 eq. 11. (erg/s)\n",
+    "    ''' Returns synchrotron losses from Barnes&Kasen2016 eq. 11. (MeV/s)\n",
     "    args:\n",
-    "    v_beta = beta particle velocity\n",
-    "    B = Magnetic field strength\n",
+    "    v_beta = beta particle velocity (cm/s)\n",
+    "    B = Magnetic field strength (G)\n",
     "    '''\n",
     "    gamma = np.sqrt(1./(1-(v_beta/c_)**2))\n",
     "    loss = (4./9.) * r_e_**2 * c_ * gamma**2 * (v_beta / c_)**2 * B**2\n",
-    "    return(loss)\n",
+    "    return(to_MeV(loss))\n",
+    "\n",
+    "\n",
+    "def Brem_losses(n_i, v_beta, E_beta, Z, alpha, phi_rad):\n",
+    "    ''' Returns losses due to Bremsstrahlung from \n",
+    "    Barnes&Kasen2016 eq.13 (MeV)\n",
+    "    n_i = number density of the scattering species (cm-3)\n",
+    "    v_beta = beta particle velocity (cm/s)\n",
+    "    E_beta = Beta particle kinetic energy (MeV)\n",
+    "    Z = Atomic number \n",
+    "        (characteristic inner ejecta values Z = 60; A = 144)\n",
+    "        (characteristic outer ejecta values, two components\n",
+    "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
+    "    alpha = fine structure constant\n",
+    "    phi_rad = energy dependent empirical fitting constants\n",
+    "              (Seltzer&Berger1986 tab. I and II)\n",
+    "    '''\n",
+    "    return\n",
     "\n",
     "\n",
     "def calc_mass_density(r, t, E, Mej, delta=delta_, n=n_):\n",
@@ -123,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 137,
    "id": "f84c9a52",
    "metadata": {},
    "outputs": [],
@@ -131,6 +149,7 @@
     "def plot_rates():\n",
     "    plt.plot(E_beta, plasma_losses(E_beta, n_e, T) / rho, label='plasma')\n",
     "    plt.plot(E_beta, IE_losses(E_beta, Ibar, v_beta, n_eb) / rho, label='IE')\n",
+    "    plt.plot(E_beta, synch_losses(v_beta, B) / rho, label='synch')\n",
     "#     [plt.plot(E_beta, IE_losses(E_beta, Ibar, v_beta, n_eb) / rho) for alpha in np.logspace(-5,5,10)]\n",
     "    # plt.plot(E_beta, synch_losses(v_beta, B) / rho)\n",
     "    plt.xscale('log')\n",
@@ -140,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dded2243",
+   "id": "0ae3a3d0",
    "metadata": {},
    "source": [
     "### Plotting loss rates for typical values\n",
@@ -155,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "119d1fa4",
+   "execution_count": 138,
+   "id": "14fe0fdf",
    "metadata": {},
    "outputs": [
     {
@@ -177,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 139,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3caede7278bb47a48ece577ff66478f5",
+       "model_id": "c3d94d37a58d432aa61fedbd158f01b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +218,7 @@
    "source": [
     "E_beta = np.logspace(-2, 1, 100) # particle kinetic energy (MeV)\n",
     "T = 1e-6 # MeV\n",
-    "z_over_a = 0.4\n",
+    "z_over_a = 0.4 # 0.4 for inner ejecta\n",
     "n_e = rho_ej / m_p_ *1.e-3  # number density of bound electrons\n",
     "    # elements heavier than H are singly ionized (low temperatures)\n",
     "    # Composition from Barnes+2016 fig.1 (took A_heavy=1.e-3)\n",
@@ -208,7 +227,7 @@
     "gamma_beta = 1 + to_erg(E_beta) / (m_e_ * c_**2)\n",
     "v_beta = np.sqrt(1 - 1./gamma_beta**2) * c_\n",
     "rho = rho_ej\n",
-    "# B = 3.7e-6\n",
+    "B = 3.7e-6\n",
     "\n",
     "n_eb = calc_n_eb(rho, z_over_a)\n",
     "\n",
@@ -304,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda3cc8d",
+   "id": "8c8fbc70",
    "metadata": {},
    "outputs": [],
    "source": []
