Edited Brem_losses() docstring

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -109,8 +109,9 @@
     "        (characteristic outer ejecta values, two components\n",
     "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
     "    alpha = fine structure constant\n",
-    "    phi_rad = energy dependent empirical fitting constants\n",
-    "              (Seltzer&Berger1986 tab. I and II)\n",
+    "    phi_rad = energy dependent empirical fitting constant\n",
+    "              (Seltzer&Berger1986 eq. 5, and tab. I and II)\n",
+    "              I imagine this is determined by the choice of Z.\n",
     "    '''\n",
     "    return\n",
     "\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae3a3d0",
+   "id": "3d974e93",
    "metadata": {},
    "source": [
     "### Plotting loss rates for typical values\n",
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "14fe0fdf",
+   "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c8fbc70",
+   "id": "d23eedd5",
    "metadata": {},
    "outputs": [],
    "source": []
