--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 57,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,10 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from scipy.interpolate import interp1d\n",
+    "import sys\n",
+    "import textwrap\n",
     "\n",
     "# Constants\n",
     "lambda_ee_ = 10  # Coulomb logarithm for electron-electron scattering\n",
@@ -29,6 +33,7 @@
     "kB_ = 8.617333262145e-11  # Boltzmann constant (MeV/K)\n",
     "Msun_ = 2.0e33 # Solar mass (g)\n",
     "r_0_ = 1.8e-13 # nuclear radius coef for deformed post-scission nuclei (cm)\n",
+    "alpha_ = 1./137. # fine structure constant \n",
     "\n",
     "delta_ = 1  # power-law profile for inner ejecta (Barnes&Kasen2016)\n",
     "n_ = 1  # power-law profile for outer ejecta (Barnes&Kasen2016)\n",
@@ -98,7 +103,45 @@
     "    return(to_MeV(loss))\n",
     "\n",
     "\n",
-    "def Brem_losses(n_i, v_beta, E_beta, Z, alpha, phi_rad):\n",
+    "def phirad(E_beta, Z):\n",
+    "    ''' Returns the scaled total integrated radiative energy-loss \n",
+    "    cross-section from Bremsstrahlung (Seltzer&Berger1986)\n",
+    "    Notation: phirad\n",
+    "    args:\n",
+    "    E_beta = electron kinetic energy (MeV)\n",
+    "    Z = Atomic number\n",
+    "        (characteristic inner ejecta values Z = 60; A = 144)\n",
+    "        (characteristic outer ejecta values, two components\n",
+    "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
+    "    '''\n",
+    "\n",
+    "    filename = \"phirad_Z%d.csv\" % Z\n",
+    "    try:\n",
+    "        data = pd.read_csv(filename, delimiter=\" \")\n",
+    "    except FileNotFoundError:\n",
+    "        print(textwrap.dedent(\"\"\"\n",
+    "              %s File not found. \n",
+    "              You are probably asking for a value of Z that is not tabulated here. \n",
+    "              See Seltzer&Berger1986 for tabulations for all values.\n",
+    "              \"\"\" % filename))\n",
+    "        return(-1)\n",
+    "    \n",
+    "    T1_arr = data.T1.to_numpy() # in MeV, so simply E_beta\n",
+    "    phirad_arr = data.phirad.to_numpy()\n",
+    "    \n",
+    "    def log_interp1d(xx, yy, kind='linear'):\n",
+    "        logx = np.log10(xx)\n",
+    "        logy = np.log10(yy)\n",
+    "        lin_interp = interp1d(logx, logy, kind=kind)\n",
+    "        log_interp = lambda zz: np.power(10.0, lin_interp(np.log10(zz)))\n",
+    "        return log_interp\n",
+    "    \n",
+    "    phirad_interp = log_interp1d(T1_arr, phirad_arr)\n",
+    "    \n",
+    "    return(phirad_interp(E_beta))\n",
+    "\n",
+    "\n",
+    "def Brem_losses(n_i, v_beta, E_beta, Z):\n",
     "    ''' Returns losses due to Bremsstrahlung from \n",
     "    Barnes&Kasen2016 eq.13 (MeV)\n",
     "    n_i = number density of the scattering species (cm-3)\n",
@@ -108,12 +151,10 @@
     "        (characteristic inner ejecta values Z = 60; A = 144)\n",
     "        (characteristic outer ejecta values, two components\n",
     "        Z = 1; A = 1 (hydrogen) and Z = 55; A = 133 (heavier elems))\n",
-    "    alpha = fine structure constant\n",
-    "    phi_rad = energy dependent empirical fitting constant\n",
-    "              (Seltzer&Berger1986 eq. 5, and tab. I and II)\n",
-    "              I imagine this is determined by the choice of Z.\n",
     "    '''\n",
-    "    return\n",
+    "    E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
+    "             * Z**2 * r_0_**2 * alpha_ * phirad(E_beta, Z))\n",
+    "    return(to_MeV(E_dot))\n",
     "\n",
     "\n",
     "def calc_mass_density(r, t, E, Mej, delta=delta_, n=n_):\n",
@@ -141,24 +182,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "f84c9a52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_rates():\n",
-    "    plt.plot(E_beta, plasma_losses(E_beta, n_e, T) / rho, label='plasma')\n",
-    "    plt.plot(E_beta, IE_losses(E_beta, Ibar, v_beta, n_eb) / rho, label='IE')\n",
-    "    plt.plot(E_beta, synch_losses(v_beta, B) / rho, label='synch')\n",
-    "#     [plt.plot(E_beta, IE_losses(E_beta, Ibar, v_beta, n_eb) / rho) for alpha in np.logspace(-5,5,10)]\n",
-    "    # plt.plot(E_beta, synch_losses(v_beta, B) / rho)\n",
-    "    plt.xscale('log')\n",
-    "    plt.yscale('log')\n",
-    "    plt.legend()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3d974e93",
    "metadata": {},
@@ -175,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 58,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -196,15 +219,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92d39cb4",
+   "metadata": {},
+   "source": [
+    "For a given mass density and mass number A, we can compute the number density of scattering species for Bremsstrahlung:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 59,
+   "id": "15c54d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = 144 # inner ejecta\n",
+    "n_i = rho_ej / (A*m_p_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b4f3af9",
+   "metadata": {},
+   "source": [
+    "We can now compute the contributions from plasma, IE and Bremsstrahlung losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "92d8dece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_rates():\n",
+    "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
+    "    IE = IE_losses(E_beta, Ibar, v_beta, n_eb) / rho\n",
+    "    synch = synch_losses(v_beta, B) / rho\n",
+    "    Brem = Brem_losses(n_i, v_beta, E_beta, Z) / rho\n",
+    "    tot = plasma + IE + synch + Brem\n",
+    "    plt.plot(E_beta, plasma, label='plasma')\n",
+    "    plt.plot(E_beta, IE, label = 'IE')\n",
+    "    plt.plot(E_beta, synch, label = 'synchrotron')\n",
+    "    plt.plot(E_beta, Brem, label='Bremsstrahlung')\n",
+    "    plt.plot(E_beta, tot, label='total')\n",
+    "    plt.plot\n",
+    "    plt.xscale('log')\n",
+    "    plt.yscale('log')\n",
+    "    plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3d94d37a58d432aa61fedbd158f01b7",
+       "model_id": "42c20a36a0d346179b4b39b314e20ef1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,15 +294,18 @@
     "E_beta = np.logspace(-2, 1, 100) # particle kinetic energy (MeV)\n",
     "T = 1e-6 # MeV\n",
     "z_over_a = 0.4 # 0.4 for inner ejecta\n",
+    "\n",
     "n_e = rho_ej / m_p_ *1.e-3  # number density of bound electrons\n",
     "    # elements heavier than H are singly ionized (low temperatures)\n",
     "    # Composition from Barnes+2016 fig.1 (took A_heavy=1.e-3)\n",
     "    # (this can be refined)\n",
+    "    \n",
     "Ibar = np.exp(6.4) * 1.e-6 # (MeV)\n",
     "gamma_beta = 1 + to_erg(E_beta) / (m_e_ * c_**2)\n",
     "v_beta = np.sqrt(1 - 1./gamma_beta**2) * c_\n",
     "rho = rho_ej\n",
     "B = 3.7e-6\n",
+    "Z = 60\n",
     "\n",
     "n_eb = calc_n_eb(rho, z_over_a)\n",
     "\n",
@@ -238,87 +315,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 62,
    "id": "c09378d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a12dc43d951468d95d71c65fa7e54fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "array([0.19498581, 0.20169937, 0.20862885, 0.21577956, 0.22315675,\n",
-       "       0.23076562, 0.23861125, 0.24669858, 0.25503242, 0.26361734,\n",
-       "       0.27245769, 0.28155756, 0.29092068, 0.30055041, 0.31044968,\n",
-       "       0.32062095, 0.33106609, 0.34178638, 0.35278241, 0.36405401,\n",
-       "       0.37560017, 0.38741897, 0.39950751, 0.41186181, 0.42447673,\n",
-       "       0.4373459 , 0.45046162, 0.46381483, 0.47739499, 0.49119001,\n",
-       "       0.50518627, 0.51936848, 0.53371969, 0.5482213 , 0.56285301,\n",
-       "       0.57759285, 0.59241726, 0.60730109, 0.62221776, 0.63713931,\n",
-       "       0.65203659, 0.66687942, 0.68163679, 0.69627708, 0.7107683 ,\n",
-       "       0.72507842, 0.73917556, 0.7530284 , 0.76660641, 0.77988023,\n",
-       "       0.79282192, 0.8054053 , 0.81760622, 0.82940281, 0.84077573,\n",
-       "       0.85170834, 0.86218684, 0.87220042, 0.88174128, 0.89080464,\n",
-       "       0.89938876, 0.90749478, 0.91512665, 0.92229095, 0.9289967 ,\n",
-       "       0.93525511, 0.9410794 , 0.94648445, 0.95148662, 0.95610341,\n",
-       "       0.96035323, 0.96425514, 0.9678286 , 0.97109323, 0.97406862,\n",
-       "       0.97677415, 0.9792288 , 0.98145105, 0.9834587 , 0.98526887,\n",
-       "       0.98689784, 0.98836104, 0.98967303, 0.99084743, 0.99189699,\n",
-       "       0.99283353, 0.99366799, 0.99441046, 0.9950702 , 0.99565569,\n",
-       "       0.99617466, 0.99663415, 0.99704054, 0.9973996 , 0.99771653,\n",
-       "       0.99799603, 0.99824231, 0.99845913, 0.99864988, 0.99881757])"
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
       ]
      },
-     "execution_count": 98,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "v_beta/c_"
+    "%matplotlib widget\n",
+    "plt.plot(E_beta, phirad(E_beta, Z))\n",
+    "plt.xscale('log')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "8aa2ff28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-3.44462200e+24, -3.27207098e+24, -3.10746764e+24, -2.95047049e+24,\n",
-       "       -2.80075195e+24, -2.65799770e+24, -2.52190621e+24, -2.39218815e+24,\n",
-       "       -2.26856592e+24, -2.15077315e+24, -2.03855424e+24, -1.93166387e+24,\n",
-       "       -1.82986663e+24, -1.73293653e+24, -1.64065665e+24, -1.55281872e+24,\n",
-       "       -1.46922273e+24, -1.38967662e+24, -1.31399590e+24, -1.24200329e+24,\n",
-       "       -1.17352844e+24, -1.10840759e+24, -1.04648330e+24, -9.87604115e+23,\n",
-       "       -9.31624333e+23, -8.78403715e+23, -8.27807240e+23, -7.79704856e+23,\n",
-       "       -7.33971251e+23, -6.90485629e+23, -6.49131502e+23, -6.09796493e+23,\n",
-       "       -5.72372142e+23, -5.36753738e+23, -5.02840152e+23, -4.70533689e+23,\n",
-       "       -4.39739946e+23, -4.10367689e+23, -3.82328741e+23, -3.55537883e+23,\n",
-       "       -3.29912766e+23, -3.05373840e+23, -2.81844295e+23, -2.59250013e+23,\n",
-       "       -2.37519530e+23, -2.16584016e+23, -1.96377259e+23, -1.76835663e+23,\n",
-       "       -1.57898248e+23, -1.39506663e+23, -1.21605199e+23, -1.04140809e+23,\n",
-       "       -8.70631234e+22, -7.03244702e+22, -5.38798896e+22, -3.76871442e+22,\n",
-       "       -2.17067230e+22, -5.90183667e+21,  9.76159603e+21,  2.53149729e+22,\n",
-       "        4.07870446e+22,  5.62039631e+22,  7.15893425e+22,  8.69643323e+22,\n",
-       "        1.02347703e+23,  1.17755940e+23,  1.33203356e+23,  1.48702200e+23,\n",
-       "        1.64262784e+23,  1.79893614e+23,  1.95601518e+23,  2.11391790e+23,\n",
-       "        2.27268322e+23,  2.43233743e+23,  2.59289552e+23,  2.75436255e+23,\n",
-       "        2.91673482e+23,  3.08000116e+23,  3.24414404e+23,  3.40914059e+23,\n",
-       "        3.57496367e+23,  3.74158267e+23,  3.90896441e+23,  4.07707380e+23,\n",
-       "        4.24587455e+23,  4.41532967e+23,  4.58540201e+23,  4.75605466e+23,\n",
-       "        4.92725126e+23,  5.09895637e+23,  5.27113561e+23,  5.44375590e+23,\n",
-       "        5.61678557e+23,  5.79019445e+23,  5.96395396e+23,  6.13803711e+23,\n",
-       "        6.31241851e+23,  6.48707437e+23,  6.66198249e+23,  6.83712217e+23])"
+       "array([ 0.01      ,  0.01072267,  0.01149757,  0.01232847,  0.01321941,\n",
+       "        0.01417474,  0.01519911,  0.01629751,  0.01747528,  0.01873817,\n",
+       "        0.02009233,  0.02154435,  0.0231013 ,  0.02477076,  0.02656088,\n",
+       "        0.02848036,  0.03053856,  0.03274549,  0.03511192,  0.03764936,\n",
+       "        0.04037017,  0.04328761,  0.04641589,  0.04977024,  0.05336699,\n",
+       "        0.05722368,  0.06135907,  0.06579332,  0.07054802,  0.07564633,\n",
+       "        0.08111308,  0.0869749 ,  0.09326033,  0.1       ,  0.10722672,\n",
+       "        0.1149757 ,  0.12328467,  0.13219411,  0.14174742,  0.15199111,\n",
+       "        0.16297508,  0.17475284,  0.18738174,  0.2009233 ,  0.21544347,\n",
+       "        0.23101297,  0.24770764,  0.26560878,  0.28480359,  0.30538555,\n",
+       "        0.32745492,  0.35111917,  0.37649358,  0.40370173,  0.43287613,\n",
+       "        0.46415888,  0.49770236,  0.53366992,  0.57223677,  0.61359073,\n",
+       "        0.65793322,  0.70548023,  0.75646333,  0.81113083,  0.869749  ,\n",
+       "        0.93260335,  1.        ,  1.07226722,  1.149757  ,  1.23284674,\n",
+       "        1.32194115,  1.41747416,  1.51991108,  1.62975083,  1.7475284 ,\n",
+       "        1.87381742,  2.009233  ,  2.15443469,  2.3101297 ,  2.47707636,\n",
+       "        2.65608778,  2.84803587,  3.05385551,  3.27454916,  3.51119173,\n",
+       "        3.76493581,  4.03701726,  4.32876128,  4.64158883,  4.97702356,\n",
+       "        5.33669923,  5.72236766,  6.13590727,  6.57933225,  7.05480231,\n",
+       "        7.56463328,  8.11130831,  8.69749003,  9.32603347, 10.        ])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IE_losses(E_beta, Ibar, v_beta, n_eb)"
+    "E_beta"
    ]
   },
   {
