Markdown added to describe logical progression of the notebook

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -1,9 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bef86e31",
+   "metadata": {},
+   "source": [
+    "# Electron degradation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dc6b636",
+   "metadata": {},
+   "source": [
+    "### Exploring the different contributions to the energy loss rate for accelerated electrons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a949b46",
+   "metadata": {},
+   "source": [
+    "We start with a bunch of constants and utility functions:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "c4d84527",
+   "execution_count": null,
+   "id": "802f7e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +68,25 @@
     "\n",
     "\n",
     "def to_MeV(E):\n",
-    "    return(E/1.60218e-6)\n",
-    "\n",
-    "\n",
+    "    return(E/1.60218e-6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9919b5bc",
+   "metadata": {},
+   "source": [
+    "#### Plasma losses\n",
+    "Coulomb interactions with free thermal electrons. In the limit that the $\\beta$-particle energy far exceeds that of thermal electrons, **Huba2013** gives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9b43ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plasma_losses(E_beta, n_e, T):\n",
     "    ''' Returns beta_particle losses from interaction with free thermal\n",
     "    electrons (MeV/s).\n",
@@ -59,9 +99,25 @@
     "    return(7.7e-15 \n",
     "           * E_beta**(-.5) \n",
     "           * n_e * lambda_ee_ \n",
-    "           * (1. - (3.9 / 7.7) * T / E_beta))\n",
-    "\n",
-    "\n",
+    "           * (1. - (3.9 / 7.7) * T / E_beta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6f29e9f",
+   "metadata": {},
+   "source": [
+    "#### IE losses\n",
+    "When $\\beta$-particles are exciting or inizing bound atomic electrons."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1c1b1b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def calc_n_eb(rho, z_over_a):\n",
     "    ''' Returns the bound electron number density (cm-3) for a given\n",
     "    average Z/A.\n",
@@ -89,9 +145,25 @@
     "                + np.log(1 + tau/2) \n",
     "                + (1 - (v_beta/c_)**2) * g)\n",
     "\n",
-    "    return(to_MeV(Edot_IE))\n",
-    "\n",
-    "\n",
+    "    return(to_MeV(Edot_IE))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08129e93",
+   "metadata": {},
+   "source": [
+    "#### Synchrotron losses\n",
+    "This is strongly dependent on the magnetic field. This is negligible in the kilonova for the expected magnetic field values of 3.6e-6G at 1 day (extracted from eq. 12, Barnes&Kasen2016)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f052d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def synch_losses(v_beta, B):\n",
     "    ''' Returns synchrotron losses from Barnes&Kasen2016 eq. 11. (MeV/s)\n",
     "    args:\n",
@@ -100,9 +172,25 @@
     "    '''\n",
     "    gamma = np.sqrt(1./(1-(v_beta/c_)**2))\n",
     "    loss = (4./9.) * r_e_**2 * c_ * gamma**2 * (v_beta / c_)**2 * B**2\n",
-    "    return(to_MeV(loss))\n",
-    "\n",
-    "\n",
+    "    return(to_MeV(loss))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375c6f4f",
+   "metadata": {},
+   "source": [
+    "#### Bremsstrahlung\n",
+    "This is tricky! Strongly depends on the composition. Assumptions have to be made on the average atomic number of the ejecta, which will also vary depending on whether you are in the inner or outer ejecta. Cross-sections have been tabulated by **Seltzer&Berger1986**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c4d84527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def phirad(E_beta, Z):\n",
     "    ''' Returns the scaled total integrated radiative energy-loss \n",
     "    cross-section from Bremsstrahlung (Seltzer&Berger1986)\n",
@@ -154,31 +242,7 @@
     "    '''\n",
     "    E_dot = (n_i * v_beta * (to_erg(E_beta) + m_e_*c_**2)\n",
     "             * Z**2 * r_0_**2 * alpha_ * phirad(E_beta, Z))\n",
-    "    return(to_MeV(E_dot))\n",
-    "\n",
-    "\n",
-    "def calc_mass_density(r, t, E, Mej, delta=delta_, n=n_):\n",
-    "    ''' Returns the mass density for a given r and t in the ejecta.\n",
-    "    args:\n",
-    "    r = radius (cm)\n",
-    "    t = time (s)\n",
-    "    E = Explosion energy (erg)\n",
-    "    M = ejecta mass (Msun)\n",
-    "    '''\n",
-    "\n",
-    "    zeta_v = 1\n",
-    "    zeta_rho = 1\n",
-    "\n",
-    "    v_t = 7.1e8 * zeta_v * ((E*1.e-51) / (Mej/Msun))**(.5)\n",
-    "\n",
-    "    v = r/t\n",
-    "    if v < v_t:\n",
-    "        rho = zeta_rho * (Mej/(v_t*t)**3) \\\n",
-    "              * (r / (v_t*t))**(-delta)\n",
-    "    else:\n",
-    "        rho = zeta_rho * (Mej/(v_t*t)**3) \\\n",
-    "              * (r / (v_t*t))**(-delta)\n",
-    "    return(rho)\n"
+    "    return(to_MeV(E_dot))"
    ]
   },
   {
@@ -198,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -220,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92d39cb4",
+   "id": "1c6d78ac",
    "metadata": {},
    "source": [
     "For a given mass density and mass number A, we can compute the number density of scattering species for Bremsstrahlung:"
@@ -228,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "15c54d81",
+   "execution_count": 66,
+   "id": "a060744d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b4f3af9",
+   "id": "bef3be57",
    "metadata": {},
    "source": [
     "We can now compute the contributions from plasma, IE and Bremsstrahlung losses"
@@ -247,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "92d8dece",
+   "execution_count": 67,
+   "id": "1365a0be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42c20a36a0d346179b4b39b314e20ef1",
+       "model_id": "a8b4cf9ebe6545d58312d4078b6563f9",
        "version_major": 2,
        "version_minor": 0
       },
