Added interactive plot for parameter exploration

--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "802f7e15",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a9b43ac5",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -255,14 +255,14 @@
     "Ejecta mass: $M_\\mathrm{ej} = 10^{-3} M_\\odot$ \\\n",
     "Ejecta velocity: $v_\\mathrm{ej} = 0.2c$\n",
     "\n",
-    "Nebular phase starts at $t \\sim 100$ days:\n",
+    "We look at $t=1$day.\n",
     "\n",
-    "Ejecta density = $M_\\mathrm{ej} / \\frac{4}{3} \\pi (v_\\mathrm{ej}t)^3 = 9 \\times 10^{12}$ g.cm$^{-2}$\n"
+    "Ejecta density = $M_\\mathrm{ej} / \\frac{4}{3} \\pi (v_\\mathrm{ej}t)^3 = 1.7 \\times 10^{14}$ g.cm$^{-2}$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
@@ -306,54 +306,15 @@
    "id": "bef3be57",
    "metadata": {},
    "source": [
-    "We can now compute the contributions from plasma, IE and Bremsstrahlung losses"
+    "We can now compute the contributions from plasma, IE and Bremsstrahlung losses. We start by setting up the KN parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "1365a0be",
+   "execution_count": 8,
+   "id": "d0738858",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def plot_rates():\n",
-    "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
-    "    IE = IE_losses(E_beta, Ibar, v_beta, n_eb) / rho\n",
-    "    synch = synch_losses(v_beta, B) / rho\n",
-    "    Brem = Brem_losses(n_i, v_beta, E_beta, Z) / rho\n",
-    "    tot = plasma + IE + synch + Brem\n",
-    "    plt.plot(E_beta, plasma, label='plasma')\n",
-    "    plt.plot(E_beta, IE, label = 'IE')\n",
-    "    plt.plot(E_beta, synch, label = 'synchrotron')\n",
-    "    plt.plot(E_beta, Brem, label='Bremsstrahlung')\n",
-    "    plt.plot(E_beta, tot, label='total')\n",
-    "    plt.plot\n",
-    "    plt.xscale('log')\n",
-    "    plt.yscale('log')\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "0cacf8f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8b4cf9ebe6545d58312d4078b6563f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "E_beta = np.logspace(-2, 1, 100) # particle kinetic energy (MeV)\n",
     "T = 1e-6 # MeV\n",
@@ -371,22 +332,54 @@
     "B = 3.7e-6\n",
     "Z = 60\n",
     "\n",
-    "n_eb = calc_n_eb(rho, z_over_a)\n",
-    "\n",
-    "%matplotlib widget\n",
-    "plot_rates()"
+    "n_eb = calc_n_eb(rho, z_over_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb7f0e22",
+   "metadata": {},
+   "source": [
+    "This is the plotting function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "c09378d9",
+   "execution_count": 9,
+   "id": "1365a0be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_rates(T, rho, B):\n",
+    "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
+    "    IE = IE_losses(E_beta, Ibar, v_beta, n_eb) / rho\n",
+    "    synch = synch_losses(v_beta, B) / rho\n",
+    "    Brem = Brem_losses(n_i, v_beta, E_beta, Z) / rho\n",
+    "    tot = plasma + IE + synch + Brem\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.plot(E_beta, plasma, label='plasma')\n",
+    "    plt.plot(E_beta, IE, label = 'IE')\n",
+    "    plt.plot(E_beta, synch, label = 'synchrotron')\n",
+    "    plt.plot(E_beta, Brem, label='Bremsstrahlung')\n",
+    "    plt.plot(E_beta, tot, label='total')\n",
+    "    plt.plot\n",
+    "    plt.xscale('log')\n",
+    "    plt.yscale('log')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a12dc43d951468d95d71c65fa7e54fc",
+       "model_id": "0f38548469a64e7bac38961950fab7c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,54 +393,81 @@
    ],
    "source": [
     "%matplotlib widget\n",
-    "plt.plot(E_beta, phirad(E_beta, Z))\n",
-    "plt.xscale('log')"
+    "plot_rates(T, rho, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94243e84",
+   "metadata": {},
+   "source": [
+    "### Parameter exploration\n",
+    "\n",
+    "We'll take a look at the energy-integrated losses as a function of $T$, $\\rho$ and $B$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8aa2ff28",
+   "execution_count": 24,
+   "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5efc594a7de14677accdcccf85de66bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "array([ 0.01      ,  0.01072267,  0.01149757,  0.01232847,  0.01321941,\n",
-       "        0.01417474,  0.01519911,  0.01629751,  0.01747528,  0.01873817,\n",
-       "        0.02009233,  0.02154435,  0.0231013 ,  0.02477076,  0.02656088,\n",
-       "        0.02848036,  0.03053856,  0.03274549,  0.03511192,  0.03764936,\n",
-       "        0.04037017,  0.04328761,  0.04641589,  0.04977024,  0.05336699,\n",
-       "        0.05722368,  0.06135907,  0.06579332,  0.07054802,  0.07564633,\n",
-       "        0.08111308,  0.0869749 ,  0.09326033,  0.1       ,  0.10722672,\n",
-       "        0.1149757 ,  0.12328467,  0.13219411,  0.14174742,  0.15199111,\n",
-       "        0.16297508,  0.17475284,  0.18738174,  0.2009233 ,  0.21544347,\n",
-       "        0.23101297,  0.24770764,  0.26560878,  0.28480359,  0.30538555,\n",
-       "        0.32745492,  0.35111917,  0.37649358,  0.40370173,  0.43287613,\n",
-       "        0.46415888,  0.49770236,  0.53366992,  0.57223677,  0.61359073,\n",
-       "        0.65793322,  0.70548023,  0.75646333,  0.81113083,  0.869749  ,\n",
-       "        0.93260335,  1.        ,  1.07226722,  1.149757  ,  1.23284674,\n",
-       "        1.32194115,  1.41747416,  1.51991108,  1.62975083,  1.7475284 ,\n",
-       "        1.87381742,  2.009233  ,  2.15443469,  2.3101297 ,  2.47707636,\n",
-       "        2.65608778,  2.84803587,  3.05385551,  3.27454916,  3.51119173,\n",
-       "        3.76493581,  4.03701726,  4.32876128,  4.64158883,  4.97702356,\n",
-       "        5.33669923,  5.72236766,  6.13590727,  6.57933225,  7.05480231,\n",
-       "        7.56463328,  8.11130831,  8.69749003,  9.32603347, 10.        ])"
+       "interactive(children=(FloatLogSlider(value=1e-06, description='T', max=0.0, min=-10.0, step=1.0), FloatLogSlid…"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "E_beta"
+    "%matplotlib inline\n",
+    "from ipywidgets import *\n",
+    "\n",
+    "def update(T, rho, B):\n",
+    "    plot_rates(T, rho, B)\n",
+    "\n",
+    "interact(update, \n",
+    "         T=widgets.FloatLogSlider(min=-10, max=0, value=1.e-6, step=1),\n",
+    "         rho=widgets.FloatLogSlider(min=-18, max=-10, value=1.e-14, step=1),\n",
+    "         B=widgets.FloatLogSlider(min=-10, max=5, value=1.e-6, step=1)\n",
+    "        );"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "0a4b38ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5451748601b44333ac05f9ac201ecc81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d23eedd5",
+   "id": "a0a2ee92",
    "metadata": {},
    "outputs": [],
    "source": []
