--- a/elec_degrad.ipynb
+++ b/elec_degrad.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "802f7e15",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a9b43ac5",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f1c1b1b9",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "71f052d1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "c4d84527",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "da1d4ca1",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "a060744d",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "d0738858",
    "metadata": {},
    "outputs": [],
@@ -330,9 +330,7 @@
     "v_beta = np.sqrt(1 - 1./gamma_beta**2) * c_\n",
     "rho = rho_ej\n",
     "B = 3.7e-6\n",
-    "Z = 60\n",
-    "\n",
-    "n_eb = calc_n_eb(rho, z_over_a)"
+    "Z = 60"
    ]
   },
   {
@@ -345,12 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "1365a0be",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_rates(T, rho, B):\n",
+    "    \n",
+    "    n_eb = calc_n_eb(rho, z_over_a)\n",
+    "    n_e = rho / m_p_ *1.e-3\n",
+    "    \n",
     "    plasma = plasma_losses(E_beta, n_e, T) / rho\n",
     "    IE = IE_losses(E_beta, Ibar, v_beta, n_eb) / rho\n",
     "    synch = synch_losses(v_beta, B) / rho\n",
@@ -363,7 +365,7 @@
     "    plt.plot(E_beta, synch, label = 'synchrotron')\n",
     "    plt.plot(E_beta, Brem, label='Bremsstrahlung')\n",
     "    plt.plot(E_beta, tot, label='total')\n",
-    "    plt.plot\n",
+    "\n",
     "    plt.xscale('log')\n",
     "    plt.yscale('log')\n",
     "    plt.legend()\n",
@@ -372,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "0cacf8f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f38548469a64e7bac38961950fab7c4",
+       "model_id": "2f2e234fc86d4d5b8972788e8f9bc403",
        "version_major": 2,
        "version_minor": 0
       },
@@ -403,19 +405,19 @@
    "source": [
     "### Parameter exploration\n",
     "\n",
-    "We'll take a look at the energy-integrated losses as a function of $T$, $\\rho$ and $B$."
+    "We ll take a look at the losses as a function of $T$, $\\rho$ and $B$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "d23eedd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5efc594a7de14677accdcccf85de66bf",
+       "model_id": "68273308a7644c559665c84c90b9c3ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -443,37 +445,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0a4b38ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5451748601b44333ac05f9ac201ecc81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntSlider(value=0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a0a2ee92",
+   "id": "af64ee11",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "gist": {
+   "data": {
+    "description": "elec_degrad.ipynb",
+    "public": true
+   },
+   "id": ""
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
